--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="brp.jpg" alt="..." />
+                <img class="masthead-avatar mb-5" src="aaaa.jpg" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Anil Lama</h1>
                 <!-- Masthead Subheading-->
