--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Online Helpers</p>
                 <nav>
-                    <a href="https://www.youtube.com/@ajitbade8136"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.youtube.com/@amknepal/featured"><i class="fab fa-youtube"></i></a>
                     <a href="http://https://www.facebook.com/bijaymoktan.87/photos/a.103631004563483/719882452938332/?__tn__=%3C"><i class="fab fa-facebook-f"></i></a>
                     
                 </nav>
