--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <nav>
                     <a href="https://www.youtube.com/@amknepal/featured"><i class="fab fa-youtube"></i></a>
                     <a href="http://https://www.facebook.com/bijaymoktan.87/photos/a.103631004563483/719882452938332/?__tn__=%3C"><i class="fab fa-facebook-f"></i></a>
-                    
+                    <a href="https://www.instagram.com/nepalitypingcenter?igsh=ZzVxam43N3l6aWs1"><i class="fab fa-instagram"></i></a>
                 </nav>
 
                 
