--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <!-- Navigation bar and other header elements -->
-     <img src="aaaa.jpg alt="Description of your image">
+     <img src="aaaa.jpg" alt="Description of your image">
     <!-- Blog content -->
     <div class="container">
         <h2>Latest Blog Posts</h2>
