--- a/index.html
+++ b/index.html
@@ -1,88 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags and other necessary elements -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Anil Lama Official Website</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-    <!-- Google fonts-->
+    <title>Blog - Anil Lama</title>
+    <!-- Include CSS stylesheets -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet"> <!-- Your custom styles -->
+    <link href="css/custom.css" rel="stylesheet">
 </head>
 <body id="page-top">
-    <!-- Masthead-->
+    <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
         <div class="container d-flex align-items-center flex-column">
-            <!-- Masthead Avatar Image-->
+            <!-- Masthead Avatar Image -->
             <img class="masthead-avatar mb-5" src="aaaa.jpg" alt="...">
-            <!-- Masthead Heading-->
+            <!-- Masthead Heading -->
             <h1 class="masthead-heading text-uppercase mb-0">Anil Lama</h1>
-            <!-- Masthead Subheading-->
+            <!-- Masthead Subheading -->
             <p class="masthead-subheading font-weight-light mb-0">Online Helpers</p>
+            <!-- Navigation -->
             <nav class="social-links">
-                </li>
                 <a href="https://www.youtube.com/@anillama9033"><i class="fab fa-youtube"></i></a>
-                </li>
-                <a href="http://https://www.facebook.com/bijaymoktan.87/photos/a.103631004563483/719882452938332/?__tn__=%3C"><i class="fab fa-facebook-f"></i></a>
-                </li>
+                <a href="https://www.facebook.com/bijaymoktan.87/photos/a.103631004563483/719882452938332/?__tn__=%3C"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.instagram.com/nepalitypingcenter?igsh=ZzVxam43N3l6aWs1"><i class="fab fa-instagram"></i></a>
-                </li>
             </nav>
         </div>
     </header>
-    <!-- Copyright Section-->
+
+    <!-- Blog Content -->
+    <div class="container">
+        <img src="aaaa.jpg" alt="Description of your image">
+        <h2>Latest Blog Posts</h2>
+        <div class="blog-post">
+            <!-- Blog post content -->
+        </div>
+    </div>
+
+    <!-- Footer -->
     <footer class="copyright py-4 text-center text-white">
         <div class="container"><small>&copy; 2021 Anil Lama</small></div>
     </footer>
-    <!-- Bootstrap core JS-->
+
+    <!-- Bootstrap core JS and Core theme JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 </html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <!-- Meta tags and other necessary elements -->
-    <title>Blog - Anil Lama</title>
-    <!-- Include CSS stylesheets -->
-</head>
-<body>
-    <!-- Navigation bar and other header elements -->
-     <img src="aaaa.jpg" alt="Description of your image">
-    <!-- Blog content -->
-    <div class="container">
-        <h2>Latest Blog Posts</h2>
-        <div class="blog-post">
-            <h3>How Online Helpers Are Streamlining Our Digital Lives</h3>
-            <p>Date: January 15, 2024</p>
-            <p>Author: Anil Lama</p>
-            <p>In today's fast-paced world, the digital landscape is constantly evolving, and with it comes a multitude of tasks and responsibilities. Enter the online helper – a digital ally designed to simplify our lives and boost productivity.In today's fast-paced world, the digital landscape is constantly evolving, and with it comes a multitude of tasks and responsibilities. Enter the online helper – a digital ally designed to simplify our lives and boost productivity.
-        Introduction:
-Online helpers, ranging from productivity tools to virtual assistants, play a vital role in our daily routines. They offer solutions to complex problems, streamline workflows, and empower users to achieve more in less time.Main Points:
-
-Productivity Tools: From task management apps to note-taking software, productivity tools keep us organized and focused. They help us prioritize tasks, set deadlines, and collaborate seamlessly with others.
-Virtual Assistants: Virtual assistants like Siri, Alexa, and Google Assistant are always at our beck and call, ready to answer questions, schedule appointments, and perform tasks with just a simple voice command.
-Collaborative Platforms: Online collaborative platforms such as Google Workspace and Microsoft Teams facilitate teamwork by providing shared workspaces, real-time editing capabilities, and communication channels.
-        Conclusion:
-Online helpers have become indispensable companions in our digital lives, offering efficiency, convenience, and innovation at our fingertips. By harnessing the power of these tools and platforms, we can navigate the complexities of the digital world with ease.
-
-        Call to Action:
-Have you experienced the benefits of online helpers in your daily routine? Share your favorite tools and tips in the comments below, and let's continue to empower each other in our digital journeys.
-
-        Publish and Promote:
-Once you're satisfied with your post, hit the publish button and share it across your social networks. Together, let's embrace the era of online helpers and unlock new possibilities in our digital endeavors.</p>
-
-        </div>
-        <!-- More blog posts can be added similarly -->
-    </div>
     
     <!-- Footer and other necessary elements -->
 </body>
