--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container">
         <img src="aaaa.jpg" alt="Description of your image">
         <h2>Latest Blog Posts</h2>
-        <div class="blog-post">
+        <div class="TESTt">
             <!-- Blog post content -->
         </div>
     </div>
