--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         </div>
     </header>
 
-    <!-- Blog Content -->
+    <!-- KNOW ME -->
     <div class="container">
         <img src="aaaa.jpg" alt="Description of your image">
         <h2>Latest Blog Posts</h2>
         <div class="TESTt">
-            <!-- Blog post content -->
+            <!-- I am from Nepal and i am a sutdent of BASW i am tying to understant How to make a website and how to do coding.  -->
         </div>
     </div>
 
