--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
     <div class="container">
         <img src="aaaa.jpg" alt="Description of your image">
         <h2>Latest Blog Posts</h2>
+        
+        I am from Nepal and i am a sutdent of BASW i am tying to understant How to make a website and how to do coding
         <div class="TESTt">
-            <!-- I am from Nepal and i am a sutdent of BASW i am tying to understant How to make a website and how to do coding.  -->
+
         </div>
     </div>
 
