--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- Linking CSS files -->
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+
+    <!-- Font Awesome Icons Script -->
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body id="page-top">
 
@@ -25,13 +28,19 @@
             <!-- Masthead Heading -->
             <h1 class="masthead-heading text-uppercase mb-0">Anil Lama</h1>
             <!-- Masthead Subheading -->
-            <p class="masthead-subheading font-weight-light mb-0">L1 Lead at Fonepay</p>
+            <p class="masthead-subheading font-weight-light mb-0">L1 Lead</p>
 
             <!-- Social Media Navigation -->
             <nav class="social-nav">
-                <a href="https://www.youtube.com/@anillama9033" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-                <a href="https://www.facebook.com/bijaymoktan.87/photos/a.103631004563483/719882452938332/?__tn__=%3C" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://www.instagram.com/nepalitypingcenter?igsh=ZzVxam43N3l6aWs1" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.youtube.com/@anillama9033" aria-label="YouTube" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                </a>
+                <a href="https://www.facebook.com/bijaymoktan.87/photos/a.103631004563483/719882452938332/?__tn__=%3C" aria-label="Facebook" target="_blank">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="https://www.instagram.com/nepalitypingcenter?igsh=ZzVxam43N3l6aWs1" aria-label="Instagram" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
             </nav>
         </div>
     </header>
@@ -119,5 +128,19 @@
 
     <!-- Optional: Include JS files -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
+    <!-- CSS for Social Media Icons -->
+    <style>
+        .social-nav a {
+            margin: 0 15px;
+            color: white;
+            font-size: 24px;
+            transition: color 0.3s ease;
+        }
+
+        .social-nav a:hover {
+            color: #007bff; /* Hover color */
+        }
+    </style>
 </body>
 </html>
