--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <!-- Masthead Heading -->
             <h1 class="masthead-heading text-uppercase mb-0">Anil Lama</h1>
             <!-- Masthead Subheading -->
-            <p class="masthead-subheading font-weight-light mb-0">L1 Lead at Fonepay</p>
+            <p class="masthead-subheading font-weight-light mb-0">L1 Lead</p>
 
             <!-- Social Media Navigation -->
             <nav class="social-nav">
