--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="education-item">
                 <h4>Bachelor in Socail Work (BSW)</h4>
                 <p><strong>Tribhuvan University</strong> - 2020 to 2025</p>
-                <p>Bachelor last yera running and aprox it will be conmplete on 2025 july</p>
+                <p>Bachelor last year running and aprox it will be complete on 2025 july</p>
             </div>
 
             <div class="education-item">
