--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Anil Lama's professional portfolio showcasing experience and achievements in the fintech industry.">
     <meta name="author" content="Anil Lama">
-    <title>Anil Lama - Portfolio</title>
+    <title>Anil Lama(अनिल लामा) - Portfolio</title>
 
     <!-- Linking Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
