--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Anil Lama's professional portfolio showcasing experience and achievements in the fintech industry.">
     <meta name="author" content="Anil Lama">
-    <title>Anil Lama(अनिल लामा) - Portfolio</title>
+    <title>Anil Lama - Portfolio</title>
 
     <!-- Linking Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -131,7 +131,7 @@
             <!-- Masthead Avatar Image -->
             <img class="masthead-avatar mb-5" src="aaaa.jpg" alt="Anil Lama">
             <!-- Masthead Heading -->
-            <h1 class="masthead-heading text-uppercase mb-0">Anil Lama</h1>
+            <h1 class="masthead-heading text-uppercase mb-0">Anil Lama(अनिल लामा)</h1>
             <!-- Masthead Subheading -->
             <p class="masthead-subheading font-weight-light mb-0">L1 Lead</p>
 
