--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
             <h2 class="section-title">Education</h2>
 
             <div class="education-item">
-                <h4>Bachelor in Socail Work (BSW)</h4>
+                <h4>Bachelor in Social Work (BSW)</h4>
                 <p><strong>Tribhuvan University</strong> - 2020 to 2025</p>
                 <p>Bachelor last year running and aprox it will be complete on 2025 july</p>
             </div>
 
             <div class="education-item">
                 <h4>Higher Secondary Education (12th Grade)</h4>
-                <p><strong>Unique Collage</strong> - 2018 to 2020</p>
+                <p><strong>Unique College</strong> - 2018 to 2020</p>
                 <p>Studied a diverse curriculum with a focus on social work, rural development, and sociology</p>
             </div>
         </section>
