--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             font-family: 'Lato', sans-serif;
             background-color: #f8f9fa;
             color: #333;
+            margin: 0;
         }
 
         h2 {
@@ -34,6 +35,8 @@
 
         .container {
             padding: 50px 15px;
+            max-width: 1200px;
+            margin: 0 auto;
         }
 
         /* Header Styles */
@@ -41,6 +44,7 @@
             background: #007bff;
             color: white;
             padding: 50px 0;
+            text-align: center;
         }
 
         .masthead-avatar {
@@ -51,10 +55,12 @@
 
         .masthead-heading {
             font-size: 36px;
+            margin: 10px 0;
         }
 
         .masthead-subheading {
             font-size: 18px;
+            margin: 0;
         }
 
         .social-nav a {
@@ -65,7 +71,7 @@
         }
 
         .social-nav a:hover {
-            color: #007bff;
+            color: #0056b3;
         }
 
         /* Section Styles */
@@ -126,12 +132,12 @@
 <body id="page-top">
 
     <!-- Header Section -->
-    <header class="masthead text-center">
-        <div class="container d-flex flex-column align-items-center">
+    <header class="masthead">
+        <div class="container">
             <!-- Masthead Avatar Image -->
             <img class="masthead-avatar mb-5" src="aaaa.jpg" alt="Anil Lama">
             <!-- Masthead Heading -->
-            <h1 class="masthead-heading text-uppercase mb-0">Anil Lama(अनिल लामा)</h1>
+            <h1 class="masthead-heading text-uppercase mb-0">Anil Lama (अनिल लामा)</h1>
             <!-- Masthead Subheading -->
             <p class="masthead-subheading font-weight-light mb-0">L1 Lead</p>
 
@@ -164,8 +170,8 @@
             <p>
                 Hardworking and goal-oriented, I am always eager to learn, adapt, and make a meaningful difference in the fintech industry.
             </p>
-            </p>
-                To build career organization, where I can get opportunity to prove my abilities by Accepting the challenges, fulfilling the organization goal and clime the career ladder through continuous learning and commitment.
+            <p>
+                To build a career in an organization where I can get opportunities to prove my abilities by accepting challenges, fulfilling organizational goals, and climbing the career ladder through continuous learning and commitment.
             </p>
         </section>
 
@@ -195,13 +201,13 @@
             <div class="education-item">
                 <h4>Bachelor in Social Work (BSW)</h4>
                 <p><strong>Tribhuvan University</strong> - 2020 to 2025</p>
-                <p>Bachelor last year running and aprox it will be complete on 2025 july</p>
+                <p>Bachelor last year ongoing and expected to complete by July 2025.</p>
             </div>
 
             <div class="education-item">
                 <h4>Higher Secondary Education (12th Grade)</h4>
                 <p><strong>Unique College</strong> - 2018 to 2020</p>
-                <p>Studied a diverse curriculum with a focus on social work, rural development, and sociology</p>
+                <p>Studied a diverse curriculum with a focus on social work, rural development, and sociology.</p>
             </div>
         </section>
 
@@ -217,7 +223,7 @@
             </div>
 
             <div class="experience-item mb-4">
-                <h3>Fonepay Payment Service, Pulchwok, Lalitpur (2078-12-30 to present)</h3>
+                <h3>Fonepay Payment Service, Pulchowk, Lalitpur (2078-12-30 to present)</h3>
                 <p>
                     As an L1 Lead at Fonepay, I play a key role in ensuring seamless digital payment operations, optimizing processes, and contributing to the company's growth through innovation and efficiency.
                 </p>
