--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         /* Global Styles */
         body {
             font-family: 'Lato', sans-serif;
-            background-color: #f8f9fa;
-            color: #333;
+            background-color: #001f3f; /* Navy blue */
+            color: white;
             margin: 0;
         }
 
         h2 {
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
-            color: #007bff;
+            color: #ffffff; /* White */
         }
 
         .container {
@@ -41,7 +41,7 @@
 
         /* Header Styles */
         .masthead {
-            background: #007bff;
+            background: #001f3f; /* Navy blue */
             color: white;
             padding: 50px 0;
             text-align: center;
@@ -71,7 +71,7 @@
         }
 
         .social-nav a:hover {
-            color: #0056b3;
+            color: #ffffff; /* White */
         }
 
         /* Section Styles */
@@ -81,6 +81,7 @@
             padding: 30px;
             border-radius: 10px;
             background-color: white;
+            color: #001f3f; /* Navy blue text */
         }
 
         .section-title {
@@ -95,7 +96,7 @@
 
         /* Contact Section */
         #contact a {
-            color: #007bff;
+            color: #001f3f; /* Navy blue */
             text-decoration: none;
         }
 
@@ -105,7 +106,7 @@
 
         /* Footer */
         footer {
-            background-color: #007bff;
+            background-color: #001f3f; /* Navy blue */
             color: white;
             padding: 20px;
             text-align: center;
@@ -121,7 +122,7 @@
         }
 
         .education-item h4 {
-            color: #007bff;
+            color: #001f3f; /* Navy blue */
         }
 
         .education-item p {
