--- a/index.html
+++ b/index.html
@@ -22,29 +22,25 @@
         /* Global Styles */
         body {
             font-family: 'Lato', sans-serif;
-            background-color: #001f3f; /* Navy blue */
-            color: white;
-            margin: 0;
+            background-color: #f8f9fa;
+            color: #333;
         }
 
         h2 {
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
-            color: #ffffff; /* White */
+            color: #007bff;
         }
 
         .container {
             padding: 50px 15px;
-            max-width: 1200px;
-            margin: 0 auto;
         }
 
         /* Header Styles */
         .masthead {
-            background: #001f3f; /* Navy blue */
+            background: #007bff;
             color: white;
             padding: 50px 0;
-            text-align: center;
         }
 
         .masthead-avatar {
@@ -55,12 +51,10 @@
 
         .masthead-heading {
             font-size: 36px;
-            margin: 10px 0;
         }
 
         .masthead-subheading {
             font-size: 18px;
-            margin: 0;
         }
 
         .social-nav a {
@@ -71,7 +65,7 @@
         }
 
         .social-nav a:hover {
-            color: #ffffff; /* White */
+            color: #007bff;
         }
 
         /* Section Styles */
@@ -81,7 +75,6 @@
             padding: 30px;
             border-radius: 10px;
             background-color: white;
-            color: #001f3f; /* Navy blue text */
         }
 
         .section-title {
@@ -96,7 +89,7 @@
 
         /* Contact Section */
         #contact a {
-            color: #001f3f; /* Navy blue */
+            color: #007bff;
             text-decoration: none;
         }
 
@@ -106,7 +99,7 @@
 
         /* Footer */
         footer {
-            background-color: #001f3f; /* Navy blue */
+            background-color: #007bff;
             color: white;
             padding: 20px;
             text-align: center;
@@ -122,7 +115,7 @@
         }
 
         .education-item h4 {
-            color: #001f3f; /* Navy blue */
+            color: #007bff;
         }
 
         .education-item p {
@@ -133,12 +126,12 @@
 <body id="page-top">
 
     <!-- Header Section -->
-    <header class="masthead">
-        <div class="container">
+    <header class="masthead text-center">
+        <div class="container d-flex flex-column align-items-center">
             <!-- Masthead Avatar Image -->
             <img class="masthead-avatar mb-5" src="aaaa.jpg" alt="Anil Lama">
             <!-- Masthead Heading -->
-            <h1 class="masthead-heading text-uppercase mb-0">Anil Lama (अनिल लामा)</h1>
+            <h1 class="masthead-heading text-uppercase mb-0">Anil Lama(अनिल लामा)</h1>
             <!-- Masthead Subheading -->
             <p class="masthead-subheading font-weight-light mb-0">L1 Lead</p>
 
@@ -171,8 +164,8 @@
             <p>
                 Hardworking and goal-oriented, I am always eager to learn, adapt, and make a meaningful difference in the fintech industry.
             </p>
-            <p>
-                To build a career in an organization where I can get opportunities to prove my abilities by accepting challenges, fulfilling organizational goals, and climbing the career ladder through continuous learning and commitment.
+            </p>
+                To build career organization, where I can get opportunity to prove my abilities by Accepting the challenges, fulfilling the organization goal and clime the career ladder through continuous learning and commitment.
             </p>
         </section>
 
@@ -200,15 +193,15 @@
             <h2 class="section-title">Education</h2>
 
             <div class="education-item">
-                <h4>Bachelor in Social Work (BSW)</h4>
+                <h4>Bachelor in Socail Work (BSW)</h4>
                 <p><strong>Tribhuvan University</strong> - 2020 to 2025</p>
-                <p>Bachelor last year ongoing and expected to complete by July 2025.</p>
+                <p>Bachelor last year running and aprox it will be complete on 2025 july</p>
             </div>
 
             <div class="education-item">
                 <h4>Higher Secondary Education (12th Grade)</h4>
-                <p><strong>Unique College</strong> - 2018 to 2020</p>
-                <p>Studied a diverse curriculum with a focus on social work, rural development, and sociology.</p>
+                <p><strong>Unique Collage</strong> - 2018 to 2020</p>
+                <p>Studied a diverse curriculum with a focus on social work, rural development, and sociology</p>
             </div>
         </section>
 
@@ -224,7 +217,7 @@
             </div>
 
             <div class="experience-item mb-4">
-                <h3>Fonepay Payment Service, Pulchowk, Lalitpur (2078-12-30 to present)</h3>
+                <h3>Fonepay Payment Service, Pulchwok, Lalitpur (2078-12-30 to present)</h3>
                 <p>
                     As an L1 Lead at Fonepay, I play a key role in ensuring seamless digital payment operations, optimizing processes, and contributing to the company's growth through innovation and efficiency.
                 </p>
