--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         /* Global Styles */
         body {
             font-family: 'Lato', sans-serif;
-            background-color: #f8f9fa;
+            background-color: #001f3f;
             color: #333;
         }
 
         h2 {
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
-            color: #007bff;
+            color: #001f3f;
         }
 
         .container {
@@ -38,7 +38,7 @@
 
         /* Header Styles */
         .masthead {
-            background: #007bff;
+            background: #001f3f;
             color: white;
             padding: 50px 0;
         }
@@ -65,7 +65,7 @@
         }
 
         .social-nav a:hover {
-            color: #007bff;
+            color: #001f3f;
         }
 
         /* Section Styles */
@@ -89,7 +89,7 @@
 
         /* Contact Section */
         #contact a {
-            color: #007bff;
+            color: #001f3f;
             text-decoration: none;
         }
 
@@ -99,7 +99,7 @@
 
         /* Footer */
         footer {
-            background-color: #007bff;
+            background-color: #001f3f;
             color: white;
             padding: 20px;
             text-align: center;
@@ -115,7 +115,7 @@
         }
 
         .education-item h4 {
-            color: #007bff;
+            color: #001f3f;
         }
 
         .education-item p {
