--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <header class="masthead text-center">
         <div class="container d-flex flex-column align-items-center">
             <!-- Masthead Avatar Image -->
-            <img class="masthead-avatar mb-5" src="aaaa.jpg" alt="Anil Lama">
+            <img class="masthead-avatar mb-5" src="lama.jpg" alt="Anil Lama">
             <!-- Masthead Heading -->
             <h1 class="masthead-heading text-uppercase mb-0">Anil Lama(अनिल लामा)</h1>
             <!-- Masthead Subheading -->
