--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
             padding: 50px 0;
         }
 
-        .masthead-avatar {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-        }
+.masthead-avatar {
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border: 4px solid white;
+}
+
 
         .masthead-heading {
             font-size: 36px;
