--- a/index.html
+++ b/index.html
@@ -6,111 +6,65 @@
     <meta name="description" content="Anil Lama's professional portfolio showcasing experience and achievements in the fintech industry.">
     <meta name="author" content="Anil Lama">
     <title>Anil Lama - Portfolio</title>
-
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
     <style>
         body {
             font-family: 'Lato', sans-serif;
             background-color: #f4f4f9;
             color: #333;
-        }
-
-        h2 {
-            font-family: 'Montserrat', sans-serif;
-            font-weight: 700;
-            color: #2c3e50;
+            margin: 0;
+            padding: 0;
         }
 
         .masthead {
-            background: linear-gradient(135deg, #2c3e50 0%, #4b79a1 100%);
+            background: linear-gradient(135deg, #4b79a1 0%, #283e51 100%);
             color: white;
             padding: 100px 0;
             text-align: center;
         }
 
         .masthead-avatar {
-            width: 180px;
-            height: 180px;
+            width: 200px;
+            height: 200px;
             border-radius: 50%;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            border: 4px solid white;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+            border: 5px solid #fff;
         }
 
         .masthead-heading {
             font-size: 48px;
             margin: 20px 0;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 700;
         }
 
         .masthead-subheading {
-            font-size: 22px;
+            font-size: 24px;
             font-weight: 300;
         }
 
         .social-nav a {
-            margin: 0 15px;
+            margin: 0 10px;
             color: white;
-            font-size: 28px;
+            font-size: 30px;
             transition: color 0.3s ease;
         }
 
         .social-nav a:hover {
-            color: #e74c3c;
-        }
-
-        section {
-            background-color: white;
-            border-radius: 10px;
-            padding: 30px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin: 30px 0;
-        }
-
-        .section-title {
-            text-align: center;
-            color: #2c3e50;
-            margin-bottom: 20px;
-        }
-
-        footer {
-            background-color: #2c3e50;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-
-        footer p {
-            margin: 0;
+            color: #ffd700;
         }
     </style>
 </head>
 <body>
     <header class="masthead">
-        <img class="masthead-avatar mb-5" src="lama.jpg" alt="Anil Lama">
-        <h1 class="masthead-heading text-uppercase mb-0">Anil Lama (अनिल लामा)</h1>
-        <p class="masthead-subheading">L1 Lead</p>
+        <img class="masthead-avatar" src="lama.jpg" alt="Anil Lama">
+        <h1 class="masthead-heading">Anil Lama</h1>
+        <p class="masthead-subheading">L1 Lead at Fonepay</p>
         <nav class="social-nav">
             <a href="https://www.youtube.com/@anillama9033" target="_blank"><i class="fab fa-youtube"></i></a>
-            <a href="https://www.facebook.com/bijaymoktan.87" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/nepalitypingcenter" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/bijaymoktan.87/photos/a.103631004563483/719882452938332/?__tn__=%3C" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/nepalitypingcenter?igshid=ZzVxam43N3l6aWs1" target="_blank"><i class="fab fa-instagram"></i></a>
         </nav>
     </header>
-
-    <main class="container">
-        <section id="about">
-            <h2 class="section-title">About Me</h2>
-            <p>
-                I am Anil Lama, an L1 Lead at Fonepay, dedicated to driving efficiency and innovation in the digital payment sector. With a strong work ethic and a passion for technology, I strive for excellence in all my endeavors.
-            </p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 Anil Lama. All Rights Reserved.</p>
-    </footer>
 </body>
 </html>
